...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_kk_name"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_kk_name"
                android:hint="@string/patriarch_name"
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_kk_num"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_kk_num"
                android:hint="@string/patriarch_card_number"
                android:inputType="number"
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>
...
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_name"
                android:hint="@string/full_name"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/sex"
                style="@style/AppTheme.StepView.AppCompatTextView"/>

            <RadioGroup
                android:id="@+id/rg_sex"
                android:orientation="horizontal"
                style="@style/AppTheme.StepView.RadioGroup">

                <RadioButton
                    android:id="@+id/rg_sex_rb_male"
                    android:text="@string/male"
                    style="@style/AppTheme.StepView.RadioButton"/>

                <RadioButton
                    android:id="@+id/rg_sex_rb_female"
                    android:text="@string/female"
                    style="@style/AppTheme.StepView.RadioButton"/>

            </RadioGroup>

        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/born_at"
                style="@style/AppTheme.StepView.AppCompatTextView"/>

            <RadioGroup
                android:id="@+id/rg_born_place"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5">

                <RadioButton
                    android:id="@+id/rg_born_place_rs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_name"
                    android:text="@string/hospital"/>

                <RadioButton
...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_born_location"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_location"
                android:hint="@string/born_location"
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_born_day"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_day"
                android:hint="@string/born_day"
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_born_date"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_date"
                android:hint="@string/born_date"
                style="@style/AppTheme.StepView.EditText"
...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_born_time"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_time"
                android:hint="@string/born_time"
                style="@style/AppTheme.StepView.EditText"
                />

        </android.support.design.widget.TextInputLayout>

...

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/born_type"
                style="@style/AppTheme.StepView.AppCompatTextView"/>

            <RadioGroup
                android:id="@+id/rg_born_type"
                android:orientation="vertical"
                style="@style/AppTheme.StepView.RadioGroup">

                <RadioButton
                    android:id="@+id/rg_born_type_single"
                    android:text="@string/single"
                    style="@style/AppTheme.StepView.RadioButton"/>

                <RadioButton
                    android:id="@+id/rg_born_type_twin"
                    android:text="@string/twin"
...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_born_seq"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_seq"
                android:hint="@string/born_seq"
                android:inputType="number"
                android:maxLength="1"
                style="@style/AppTheme.StepView.EditText"
                />

...

            <android.support.v7.widget.AppCompatTextView
                android:text="@string/born_helper"
                style="@style/AppTheme.StepView.AppCompatTextView"/>

            <RadioGroup
                android:id="@+id/rg_born_helper"
                android:orientation="vertical"
                style="@style/AppTheme.StepView.RadioGroup">

                <RadioButton
                    android:id="@+id/rg_born_helper_docter"
                    android:text="@string/docter"
                    style="@style/AppTheme.StepView.RadioButton"/>

                <RadioButton
                    android:id="@+id/rg_born_helper_tocologist_nurse"
                    android:text="@string/tocologist_nurse"
...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_baby_weight"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_baby_weight"
                android:hint="@string/baby_weight"
                android:inputType="number"
                android:maxLength="1"
                style="@style/AppTheme.StepView.EditText"
                />

...

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_baby_height"
            style="@style/AppTheme.StepView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_baby_height"
                android:hint="@string/baby_height"
                android:inputType="number"
                android:maxLength="1"
                style="@style/AppTheme.StepView.EditText"
                />

...
