...
    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_certificate_of_birth_not_found">Cannot retrieve certificate of birth data. Check your internet connection</string>

    <!-- Stepper activity -->
    <string name="patriarch_data">Patriarch data</string>
    <string name="baby_data">Baby data</string>
    <string name="father_data">Father data</string>
    <string name="mother_data">Mother data</string>
    <string name="rapporteur_data">Rapporteur data</string>
    <string name="first_spectator_data">First spectator data</string>
    <string name="second_spectator_data">Second spectator data</string>
    <string name="photo_data">Photo data</string>
...
